增加详情页和我的借书列表

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,10 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/bookDetail/index",
     "pages/addBook/index",
     "pages/mybooks/index",
+    "pages/myBorrow/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
     "pages/databaseGuide/databaseGuide",
@@ -14,7 +16,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "达文东的图书馆",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
